--- a/BasicControlLibrary/Menu.xaml
+++ b/BasicControlLibrary/Menu.xaml
@@ -6,11 +6,15 @@
              xmlns:local="clr-namespace:BasicControlLibrary"
              mc:Ignorable="d" 
              d:DesignHeight="25" d:DesignWidth="800">
+    <UserControl.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.New" Executed="NewCommand_Executed"></CommandBinding>
+        <CommandBinding Command="ApplicationCommands.Open" Executed="OpenCommand_Executed"></CommandBinding>
+    </UserControl.CommandBindings>
     <DockPanel>
     <Menu>
         <MenuItem Header="文件">
-            <MenuItem Header="新建"></MenuItem>
-            <MenuItem Header="打开"></MenuItem>
+            <MenuItem Header="新建" Command="ApplicationCommands.New"></MenuItem>
+            <MenuItem Header="打开" Command="ApplicationCommands.Open"></MenuItem>
             <MenuItem Header="最近打开的文件"></MenuItem>
             <MenuItem Header="保存"></MenuItem>
             <MenuItem Header="另存为"></MenuItem>
