--- a/document-generator/App.xaml
+++ b/document-generator/App.xaml
@@ -3,8 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:document_generator"
              xmlns:sys="clr-namespace:System;assembly=System.Runtime"
+             xmlns:basic ="clr-namespace:BasicControlLibrary;assembly=BasicControlLibrary"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <sys:String x:Key="mainPath">D:\\xml\\data\\main.xmlmain</sys:String>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/BasicControlLibrary;component/BasicDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>    
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
