--- a/Components/MemberContent.xaml
+++ b/Components/MemberContent.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Components.Content"
+﻿<UserControl x:Class="Components.MemberContent"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Border Margin="5">
-            <ListBox x:Name="contentList">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label Grid.Row="0" HorizontalAlignment="Center">此处显示所有的成员</Label>
+        <Border Margin="5" Grid.Row="1">
+            <ListBox x:Name="memberContentList">
             </ListBox>
         </Border>  
     </Grid>
