--- a/XMLToDocument/MainWindow.xaml
+++ b/XMLToDocument/MainWindow.xaml
@@ -14,6 +14,7 @@
         <CommandBinding Command="components:Commands.SaveAs" Executed="SaveAsCommand_Executed"/>
         <CommandBinding Command="components:Commands.Output" Executed="OutputCommand_Executed"/>
         <CommandBinding Command="components:Commands.Exit" Executed="ExitCommand_Executed"/>
+        <CommandBinding Command="components:Commands.Delete" Executed="DeleteCommand_Executed"/>
     </Window.CommandBindings>
     
     <Grid ShowGridLines="True">
