--- a/XMLToDocument/MainWindow.xaml
+++ b/XMLToDocument/MainWindow.xaml
@@ -15,6 +15,8 @@
         <CommandBinding Command="components:Commands.Output" Executed="OutputCommand_Executed"/>
         <CommandBinding Command="components:Commands.Exit" Executed="ExitCommand_Executed"/>
         <CommandBinding Command="components:Commands.Delete" Executed="DeleteCommand_Executed"/>
+        <CommandBinding Command="components:Commands.Produce" Executed="ProduceCommand_Executed"/>
+        <CommandBinding Command="components:Commands.Preview" Executed="PreviewCommand_Executed"/>
     </Window.CommandBindings>
     
     <Grid ShowGridLines="True">
